--- a/index.html
+++ b/index.html
@@ -3,30 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>W4RAS STORE | V23.0 ULTIMATE</title>
+    <title>W4RAS STORE | V25.0 ULTIMATE FIX</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;600;800&display=swap" rel="stylesheet">
     <style>
         body { background: radial-gradient(circle at top right, #062d24, #050505); color: #fff; font-family: 'Plus Jakarta Sans', sans-serif; min-height: 100vh; overflow-x: hidden; }
         .glass { background: rgba(255, 255, 255, 0.03); border: 1px solid rgba(255, 255, 255, 0.1); backdrop-filter: blur(15px); }
         .btn-premium { background: linear-gradient(135deg, #08b291 0%, #10b981 100%); transition: 0.3s; cursor: pointer; border: none; }
-        .btn-premium:hover { opacity: 0.8; transform: translateY(-2px); box-shadow: 0 5px 15px rgba(16, 185, 129, 0.4); }
         .input-elite { background: rgba(0,0,0,0.4); border: 1px solid rgba(255,255,255,0.1); padding: 12px; border-radius: 12px; outline: none; width: 100%; color: white; font-size: 12px; }
-        .modal-blur { backdrop-filter: blur(10px); background: rgba(0,0,0,0.85); display: none; position: fixed; inset: 0; z-index: 100; align-items: center; justify-content: center; padding: 20px; }
+        .modal-blur { backdrop-filter: blur(20px); background: rgba(0,0,0,0.95); display: none; position: fixed; inset: 0; z-index: 100; align-items: center; justify-content: center; padding: 20px; }
         
         /* GEMBOK ADMIN KIRI BAWAH */
         #admin-trigger { position: fixed; bottom: 20px; left: 20px; width: 35px; height: 35px; background: rgba(255,255,255,0.05); border-radius: 50%; display: flex; align-items: center; justify-content: center; cursor: pointer; z-index: 10000; opacity: 0.2; transition: 0.3s; }
         #admin-trigger:hover { opacity: 1; background: #10b981; }
 
-        /* NOTIFIKASI KIRI BAWAH */
-        #toast-container { position: fixed; bottom: 80px; left: 20px; z-index: 9999; display: flex; flex-direction: column; gap: 8px; }
-        .toast-card { background: #0a0a0a; border-left: 4px solid #10b981; padding: 12px 20px; border-radius: 10px; animation: slideLeft 0.3s ease; }
-        @keyframes slideLeft { from { transform: translateX(-100%); opacity: 0; } to { transform: translateX(0); opacity: 1; } }
+        /* QRIS FRAME 250x250 - LINK LANGSUNG */
+        .qris-frame { width: 250px; height: 250px; object-fit: contain; margin: 15px auto; background: white; border-radius: 15px; border: 4px solid #10b981; display: block; }
 
-        /* UKURAN QRIS 250x250 */
-        .qris-frame { width: 250px; height: 250px; object-fit: contain; margin: 0 auto; background: white; border-radius: 15px; padding: 10px; border: 2px solid #10b981; }
-        
-        .active-cat { background: #10b981 !important; border-color: #10b981 !important; color: white !important; }
+        #toast-container { position: fixed; bottom: 80px; left: 20px; z-index: 9999; display: flex; flex-direction: column; gap: 8px; }
+        .toast-card { background: #0a0a0a; border-left: 4px solid #10b981; padding: 12px 20px; border-radius: 10px; }
+        .active-cat { background: #10b981 !important; color: white !important; }
     </style>
 </head>
 <body class="flex flex-col">
@@ -47,7 +43,7 @@
     <div id="shop-view" class="max-w-7xl mx-auto px-6 py-8 w-full">
         <div class="p-8 mb-6 rounded-[2.5rem] border border-emerald-500/20 bg-emerald-500/5">
             <h1 class="text-3xl font-black italic uppercase">W4RAS <span class="text-emerald-400">DASHBOARD</span></h1>
-            <marquee class="text-[10px] text-emerald-400/50 font-bold mt-2">V23.0 ULTIMATE: SEMUA FITUR REKAP AKTIF - SEARCH & CATEGORY READY - QRIS FIXED</marquee>
+            <marquee class="text-[10px] text-emerald-400/50 font-bold mt-2 italic uppercase">V25.0: QRIS FIXED - SEMUA FITUR AKTIF - KLIK ICON GEMBOK KIRI BAWAH UNTUK ADMIN</marquee>
         </div>
 
         <div class="flex flex-col md:flex-row gap-4 mb-8">
@@ -58,6 +54,39 @@
         <div id="product-list" class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-6"></div>
     </div>
 
+    <div id="payment-modal" class="modal-blur">
+        <div class="glass p-8 rounded-[3rem] max-w-sm w-full text-center border-white/10">
+            <h2 class="text-lg font-black text-emerald-400 mb-2 uppercase italic">Scan QRIS Berikut</h2>
+            <img src="https://files.catbox.moe/g2unv4.png" class="qris-frame" alt="QRIS W4RAS">
+            <div class="text-3xl font-black text-emerald-400 mb-6" id="total-tagihan">Rp 0</div>
+            <input type="file" id="evidence-file" class="hidden" onchange="updateFileName()">
+            <label for="evidence-file" id="file-label" class="cursor-pointer block p-4 border-2 border-dashed border-white/10 rounded-2xl text-[10px] text-gray-400 mb-4 uppercase font-bold">Upload Bukti Transfer</label>
+            <button onclick="sendToDiscord()" class="w-full btn-premium py-4 rounded-2xl font-black text-xs uppercase">Konfirmasi Pembayaran</button>
+            <button onclick="closeModal('payment-modal')" class="text-[10px] text-gray-400 mt-4 uppercase font-bold">Batalkan</button>
+        </div>
+    </div>
+
+    <div id="cart-modal" class="modal-blur">
+        <div class="glass p-8 rounded-[2.5rem] max-w-md w-full border-white/10">
+            <h2 class="text-xl font-black text-emerald-400 mb-6 uppercase italic">Keranjang Belanja</h2>
+            <div id="cart-items-list" class="space-y-3 mb-6"></div>
+            <div class="flex justify-between font-black text-xl mb-6 pt-4 border-t border-white/10">
+                <span>Total:</span> <span id="cart-subtotal" class="text-emerald-400">Rp 0</span>
+            </div>
+            <button onclick="checkout()" class="w-full btn-premium py-4 rounded-2xl font-black text-[10px] uppercase">Lanjut Bayar</button>
+            <button onclick="closeModal('cart-modal')" class="w-full mt-2 text-[10px] text-gray-500 uppercase font-bold">Tutup</button>
+        </div>
+    </div>
+
+    <div id="login-modal" class="modal-blur">
+        <div class="glass p-8 rounded-[2.5rem] max-w-sm w-full text-center">
+            <h2 class="text-emerald-400 font-black mb-6 uppercase">Admin Access</h2>
+            <input type="text" id="adm-user" placeholder="Username" class="input-elite mb-4 text-center">
+            <input type="password" id="adm-pass" placeholder="Password" class="input-elite mb-6 text-center">
+            <button onclick="processLogin()" class="w-full btn-premium py-4 rounded-xl font-bold uppercase text-xs">Verify</button>
+        </div>
+    </div>
+
     <main id="admin-view" class="hidden max-w-7xl mx-auto p-6 w-full">
         <div class="flex justify-between items-center mb-8 uppercase font-black text-emerald-400">
             <h2>Admin Control Panel</h2>
@@ -66,17 +95,17 @@
         <div class="grid grid-cols-1 lg:grid-cols-3 gap-8">
             <div class="glass p-6 rounded-[2rem] space-y-4">
                 <input type="text" id="p-name" placeholder="Nama Produk" class="input-elite">
-                <input type="text" id="p-cat" placeholder="Kategori (Contoh: Netflix)" class="input-elite">
+                <input type="text" id="p-cat" placeholder="Kategori" class="input-elite">
                 <input type="number" id="p-price" placeholder="Harga" class="input-elite">
-                <textarea id="p-data" placeholder="Stok Akun (User:Pass per baris)" class="input-elite h-32"></textarea>
-                <input type="text" id="p-img" placeholder="URL Gambar Produk" class="input-elite">
-                <button onclick="handleSaveProduct()" class="w-full btn-premium py-4 rounded-xl font-bold text-xs">SIMPAN PRODUK</button>
+                <textarea id="p-data" placeholder="Stok: User:Pass (Per baris)" class="input-elite h-32"></textarea>
+                <input type="text" id="p-img" placeholder="Link Gambar Produk" class="input-elite">
+                <button onclick="handleSaveProduct()" class="w-full btn-premium py-4 rounded-xl font-bold text-xs uppercase">Simpan Produk</button>
                 <hr class="opacity-10">
                 <input type="text" id="webhook-url" onchange="saveConfig()" placeholder="Discord Webhook URL" class="input-elite">
             </div>
             <div class="lg:col-span-2 glass rounded-[2rem] overflow-hidden">
                 <table class="w-full text-[11px] text-left">
-                    <thead class="bg-white/5 text-emerald-400 uppercase">
+                    <thead class="bg-white/5 text-emerald-400 uppercase font-black">
                         <tr><th class="p-5">Produk</th><th class="p-5 text-center">Stok</th><th class="p-5 text-right">Aksi</th></tr>
                     </thead>
                     <tbody id="admin-table-body"></tbody>
@@ -84,39 +113,6 @@
             </div>
         </div>
     </main>
-
-    <div id="payment-modal" class="modal-blur">
-        <div class="glass p-8 rounded-[3rem] max-w-sm w-full text-center">
-            <h2 class="text-lg font-black text-emerald-400 mb-4 uppercase italic">Selesaikan Pembayaran</h2>
-            <img src="https://files.catbox.moe/g2unv4.png" class="qris-frame mb-4" alt="QRIS">
-            <div class="text-3xl font-black text-emerald-400 mb-6" id="total-tagihan">Rp 0</div>
-            <input type="file" id="evidence-file" class="hidden" onchange="updateFileName()">
-            <label for="evidence-file" id="file-label" class="cursor-pointer block p-4 border-2 border-dashed border-white/10 rounded-2xl text-[10px] text-gray-400 mb-4 uppercase font-bold">Upload Bukti Transfer</label>
-            <button onclick="sendToDiscord()" class="w-full btn-premium py-4 rounded-2xl font-black text-xs uppercase">Konfirmasi & Ambil Akun</button>
-            <button onclick="closeModal('payment-modal')" class="text-[10px] text-gray-500 mt-4 uppercase">Batalkan</button>
-        </div>
-    </div>
-
-    <div id="cart-modal" class="modal-blur">
-        <div class="glass p-8 rounded-[2.5rem] max-w-md w-full">
-            <h2 class="text-xl font-black text-emerald-400 mb-6 uppercase">Keranjang Belanja</h2>
-            <div id="cart-items-list" class="space-y-3 mb-6"></div>
-            <div class="flex justify-between font-black text-xl mb-6 pt-4 border-t border-white/10">
-                <span>Total:</span> <span id="cart-subtotal" class="text-emerald-400">Rp 0</span>
-            </div>
-            <button onclick="checkout()" class="w-full btn-premium py-4 rounded-2xl font-black text-[10px] uppercase">Checkout Sekarang</button>
-            <button onclick="closeModal('cart-modal')" class="w-full mt-2 text-[10px] text-gray-500 uppercase font-bold">Tutup</button>
-        </div>
-    </div>
-
-    <div id="login-modal" class="modal-blur">
-        <div class="glass p-8 rounded-[2.5rem] max-w-sm w-full text-center">
-            <h2 class="text-emerald-400 font-black mb-6 uppercase">Verify Admin</h2>
-            <input type="text" id="adm-user" placeholder="Username" class="input-elite mb-4 text-center">
-            <input type="password" id="adm-pass" placeholder="Password" class="input-elite mb-6 text-center">
-            <button onclick="processLogin()" class="w-full btn-premium py-4 rounded-xl font-bold uppercase text-xs">Verify Access</button>
-        </div>
-    </div>
 
     <script>
         let products = JSON.parse(localStorage.getItem('w4ras_db_final')) || [];
@@ -138,31 +134,26 @@
         }
 
         function renderShop() {
-            // Render Kategori
             const cats = ['All', ...new Set(products.map(p => p.category))];
             document.getElementById('category-bar').innerHTML = cats.map(c => 
                 `<button onclick="filterCat('${c}')" class="px-5 py-2 rounded-full text-[9px] font-bold uppercase glass border-white/10 whitespace-nowrap ${currentCat===c?'active-cat':''}">${c}</button>`
             ).join('');
-
-            // Search & Filter Logic
             const search = document.getElementById('search-input').value.toLowerCase();
             const filtered = products.filter(p => (currentCat === 'All' || p.category === currentCat) && p.name.toLowerCase().includes(search));
-
             document.getElementById('product-list').innerHTML = filtered.map(p => `
                 <div class="glass p-5 rounded-[2rem] flex flex-col h-full border-white/5">
                     <img src="${p.img}" class="w-full h-40 object-cover rounded-xl mb-4">
-                    <h3 class="font-black text-sm uppercase">${p.name}</h3>
+                    <h3 class="font-black text-sm mb-1 uppercase">${p.name}</h3>
                     <p class="text-lg font-black text-emerald-400 mb-4">Rp ${p.price.toLocaleString()}</p>
                     <button onclick="addToCart(${p.id})" class="w-full btn-premium py-3 rounded-xl font-black text-[10px] uppercase">Beli</button>
                 </div>`).join('');
         }
 
         function filterCat(c) { currentCat = c; renderShop(); }
-
         function addToCart(id) { 
             const p = products.find(x => x.id == id);
             if(p.accounts.length <= 0) return showToast("Stok Habis!", "error");
-            cart.push({...p}); document.getElementById('cart-count').innerText = cart.length; showToast("Berhasil Masuk Keranjang"); 
+            cart.push({...p}); document.getElementById('cart-count').innerText = cart.length; showToast("Berhasil!"); 
         }
 
         function openModal(id) { document.getElementById(id).style.display = 'flex'; if(id==='cart-modal') renderCart(); }
@@ -176,7 +167,7 @@
                     <p class="font-black text-[11px] uppercase">${i.name}</p>
                     <p class="text-emerald-400 font-bold text-[10px]">Rp ${i.price.toLocaleString()}</p>
                 </div>`;
-            }).join('') || '<p class="text-center text-gray-500 text-[10px]">KERANJANG KOSONG</p>';
+            }).join('') || '<p class="text-center text-gray-500 text-[10px]">KOSONG</p>';
             document.getElementById('cart-subtotal').innerText = `Rp ${sub.toLocaleString()}`;
         }
 
@@ -191,59 +182,47 @@
         async function sendToDiscord() {
             const f = document.getElementById('evidence-file').files[0];
             const wb = localStorage.getItem('w4ras_wb');
-            if(!wb || !f) return showToast("Upload Bukti Transfer!", "error");
+            if(!wb || !f) return showToast("Lengkapi Bukti!", "error");
 
-            const reader = new FileReader();
-            reader.readAsDataURL(f);
+            const reader = new FileReader(); reader.readAsDataURL(f);
             reader.onload = async () => {
                 let accData = "";
                 activeOrder.items.forEach(item => {
                     const p = products.find(x => x.id === item.id);
-                    const taken = p.accounts.splice(0, 1);
-                    accData += `📦 **${item.name}**\n\`\`\`${taken.join('\n')}\`\`\`\n`;
+                    if(p && p.accounts.length > 0) {
+                        const taken = p.accounts.splice(0, 1);
+                        accData += `📦 **${item.name}**\n\`\`\`${taken.join('\n')}\`\`\`\n`;
+                    }
                 });
-
                 const fd = new FormData();
                 fd.append('payload_json', JSON.stringify({ 
-                    embeds: [{ 
-                        title: "🟢 PESANAN BARU", 
-                        color: 0x10b981, 
-                        fields: [{name:"🔑 DATA AKUN", value:accData}] 
-                    }] 
+                    embeds: [{ title: "🟢 PESANAN BARU", color: 0x10b981, fields: [{name:"💎 DATA AKUN", value:accData || "Stok Habis"}] }] 
                 }));
                 fd.append('file', f, 'bukti.png');
-
                 await fetch(wb, { method: 'POST', body: fd });
                 localStorage.setItem('w4ras_db_final', JSON.stringify(products));
-                showToast("Berhasil Dikirim!"); location.reload();
+                showToast("Berhasil!"); location.reload();
             };
         }
 
         function handleSaveProduct() {
             const data = document.getElementById('p-data').value.trim().split('\n').filter(l => l.trim() !== "");
-            const p = { 
-                id: Date.now(), 
-                name: document.getElementById('p-name').value, 
-                category: document.getElementById('p-cat').value || "All",
-                price: Number(document.getElementById('p-price').value), 
-                accounts: data, 
-                img: document.getElementById('p-img').value 
-            };
+            const p = { id: Date.now(), name: document.getElementById('p-name').value, category: document.getElementById('p-cat').value || "All", price: Number(document.getElementById('p-price').value), accounts: data, img: document.getElementById('p-img').value };
             products.push(p); localStorage.setItem('w4ras_db_final', JSON.stringify(products)); renderShop(); renderAdmin();
         }
 
         function renderAdmin() {
             document.getElementById('admin-table-body').innerHTML = products.map(p => `
-                <tr class="border-b border-white/5 uppercase font-bold text-[10px]">
-                    <td class="p-4">${p.name}</td>
-                    <td class="p-4 text-center text-emerald-400">${p.accounts.length} Akun</td>
-                    <td class="p-4 text-right"><button onclick="deleteP(${p.id})" class="text-red-500">HAPUS</button></td>
+                <tr class="border-b border-white/5 uppercase font-bold">
+                    <td class="p-5">${p.name}</td>
+                    <td class="p-5 text-center text-emerald-400">${p.accounts.length} Stok</td>
+                    <td class="p-5 text-right"><button onclick="deleteP(${p.id})" class="text-red-500">HAPUS</button></td>
                 </tr>`).join('');
         }
 
         function deleteP(id) { products = products.filter(x => x.id != id); localStorage.setItem('w4ras_db_final', JSON.stringify(products)); renderAdmin(); }
         function saveConfig() { localStorage.setItem('w4ras_wb', document.getElementById('webhook-url').value); showToast("Webhook Disimpan!"); }
-        function updateFileName() { document.getElementById('file-label').innerText = "BUKTI TERPILIH"; }
+        function updateFileName() { document.getElementById('file-label').innerText = "BUKTI SIAP ✓"; }
 
         renderShop();
     </script>
